<resources>
    <string name="app_name">SpaceMaster</string>
    <string name="default_web_client_id">454298352762-idaqeuoeap3uiu1t5h7ekag78mpgaa1o.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">todo</string>
    <string name="SpaceMaster">SpaceMaster</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with_google">Sign in with</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="already_have_an_account">Already have an account back to</string>
    <string name="sign_up">Sign up</string>
    <string name="search_by">Search By</string>
    <string name="search_by_time">Time</string>
    <string name="search_by_space">Space</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_item_1">Menu Item 1</string>
    <string name="menu_item_2">Menu Item 2</string>
    <string name="log_out">Sign Out</string>
    <string name="user_name">User Name</string>
    <string name="responsible_persons">Responsible Persons</string>
    <string name="or">OR</string>

</resources>